# Heuristics-MetaHeuristics

./: .gitignore  Readme.md  main.py  pyproject.toml  tsp.py
construct_heuristics/: fih.py  nih.py  nnh.py  random_heuristic.py
database/tsp/arquivos/: teste.tsp
local_search/: local_search.py
